--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,6 @@
     <dimen name="card_elevation">2dp</dimen>
     <dimen name="card_corner_radius">12dp</dimen>
     <dimen name="header_margin">24dp</dimen>
+    <dimen name="film_item_horizontal">20dp</dimen>
+    <dimen name="film_item_vertical">24dp</dimen>
 </resources>
