Выравнивание и приглаживание списка фильмов

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,12 +4,13 @@
     <dimen name="margin_small">8dp</dimen>
     <dimen name="margin_extra_small">4dp</dimen>
 
-    <dimen name="plant_item_image_height">95dp</dimen>
-    <dimen name="card_side_margin">12dp</dimen>
-    <dimen name="card_bottom_margin">26dp</dimen>
-    <dimen name="card_elevation">2dp</dimen>
-    <dimen name="card_corner_radius">12dp</dimen>
+    <dimen name="flim_list_item_image_height">95dp</dimen>
+    <dimen name="card_side_margin">15dp</dimen>
+    <dimen name="card_bottom_margin">5dp</dimen>
+    <dimen name="card_elevation">0dp</dimen>
     <dimen name="header_margin">24dp</dimen>
-    <dimen name="film_item_horizontal">20dp</dimen>
-    <dimen name="film_item_vertical">24dp</dimen>
+    <dimen name="film_item_horizontal">10dp</dimen>
+    <dimen name="film_item_vertical">2dp</dimen>
+
+
 </resources>
