--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="margin_normal">5dp</dimen>
-    <dimen name="flim_list_item_image_height">115dp</dimen>
+    <dimen name="film_list_item_image_height">70dp</dimen>
     <dimen name="card_side_margin">5dp</dimen>
     <dimen name="card_bottom_margin">5dp</dimen>
     <dimen name="card_elevation">0dp</dimen>
     <dimen name="film_item_horizontal">3dp</dimen>
     <dimen name="film_item_vertical">3dp</dimen>
-
+    <dimen name="detail_image_height">230dp</dimen>
+    <dimen name="detail_image_width">170dp</dimen>
+    <dimen name="actor_card_height">230dp</dimen>
+    <dimen name="actor_card_width">130dp</dimen>
+    <dimen name="actor_image_height">180dp</dimen>
+    <dimen name="actor_image_width">130dp</dimen>
 
 </resources>
